--- a/public/merge/index.html
+++ b/public/merge/index.html
@@ -12,13 +12,13 @@
         <h2 style="font-size: 3rem;">Upload File</h2>
         <div id="form-container">
             
-            <form class="mergeform" data-addedSubmitEventListener="false" id="form_merge_1" action="/merge" enctype="multipart/form-data" method="POST" class="signupForm">
+            <form class="mergeform" data-addedSubmitEventListener="false" id="form_merge_1" action="/upload" enctype="multipart/form-data" method="POST" class="signupForm">
                 <input type="file" id="merge_upload_1" class="inputFields" accept="application/pdf" name="pdfbm_upload" multiple="multiple"><br><br />                        
-                <input type="submit" id="upload_button_1" value="Upload" class="">            
+                <input type="submit" id="upload_button_1" value="Upload" class="hidden">            
             </form>   
-            <form class="mergeform" data-addedSubmitEventListener="false" id="form_merge_2" action="/merge" enctype="multipart/form-data" method="POST" class="signupForm">
+            <form class="mergeform" data-addedSubmitEventListener="false" id="form_merge_2" action="/upload" enctype="multipart/form-data" method="POST" class="signupForm">
                 <input type="file" id="merge_upload_2" class="inputFields" accept="application/pdf" name="pdfbm_upload" multiple="multiple"><br><br />                        
-                <input type="submit" id="upload_button_2" value="Upload" class="">            
+                <input type="submit" id="upload_button_2" value="Upload" class="hidden">            
             </form>
         </div>
         <button id="submitButton" >SUBMIT</button>
