download merged file

--- a/public/merge/index.html
+++ b/public/merge/index.html
@@ -10,6 +10,7 @@
     <body>
         
         <h2 style="font-size: 3rem;">Upload File</h2>
+        <p id="info-sse">Select Files</p>
         <div id="form-container">
             
             <form class="mergeform" data-addedSubmitEventListener="false" id="form_merge_1" action="/upload" enctype="multipart/form-data" method="POST" class="signupForm">
