add split button

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,13 @@
 <body >
   <div class="signupSection">
     <button id="join-btn" onclick="window.location.href='./bookmark/bookmarksIndex.html'">
-      Begin
+      Bookmark
     </button>
     <button id="merge-btn" onclick="window.location.href='./merge/index.html'">
       Merge
+    </button>
+    <button id="split-btn" onclick="window.location.href='./split/index.html'">
+      Split
     </button>
     <h1 onmouseenter="typeWriter()" onmouseleave="removeText()">
       Add bookmarks to PDF.<br>
