--- a/public/split/index.html
+++ b/public/split/index.html
@@ -15,7 +15,7 @@
             <div class="si-node" id="si-node-1">
                 <input type="number" disabled="true" value="1" class="si-sp" id="si-sp-1">
                 <input type="number" class="si-ep" id="si-ep-1">
-                <button onclick="add(this.parentElement)" class="si-add" id="si-add-1">+++</button>
+                <button onclick="addSupervisor(this.parentElement)" class="si-add" id="si-add-1">+++</button>
                 <button class="si-rem" id="si-rem-1">---</button>
                 <br><br>
             </div>
