created button to send split data

--- a/public/split/index.html
+++ b/public/split/index.html
@@ -33,6 +33,7 @@
         </div>
     </div>
     <p id="info">Upload your file</p>
+    <button id="send-split-data" onclick="sendData()">Split</button>
 </body>
 <script src="script.js"></script>
 </html>
