change banner text

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       Split
     </button>
     <h1 onmouseenter="typeWriter()" onmouseleave="removeText()">
-      Add bookmarks to PDF.<br>
+      All your PDF needs at one place!<br>
     </h1>
     <img class="image" src="./bookmark/PDFSynth.png" height="70px" width="70px">
 
