added reset button

--- a/public/split/index.html
+++ b/public/split/index.html
@@ -3,6 +3,7 @@
     <link rel='stylesheet' href="style.css">
 </head>
 <body>
+    <button id="reload" onclick="resetPage() ">Reset </button><br><br>
     <div id="upload-phase">
         <form id="split-upload-form" enctype="multipart/form-data" method="post">
             <input id="split-upload-input" type="file" accept="application/pdf" name="pdfbm_upload">
