add compress button

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,9 @@
     <button id="split-btn" onclick="window.location.href='./split/index.html'">
       Split
     </button>
+      <button id="split-btn" onclick="window.location.href='./compress/index.html'">
+      Compress
+    </button>
     <h1 onmouseenter="typeWriter()" onmouseleave="removeText()">
       All your PDF needs at one place!<br>
     </h1>
