Convert select tag to checkbox

--- a/public/compress/index.html
+++ b/public/compress/index.html
@@ -14,10 +14,10 @@
     </div>
     <p id="info">Upload file</p>
     <div id="download-phase">
-        <select id="compress-ratio" name="compress-ratio">
-            <option value="min">Min compression</option>
-            <option value="max">Max compression</option>
-          </select>
+        <input type = "checkbox" id="compress-ratio" name="compress-ratio">
+            <!-- <option value="min">Min compression</option>
+            <option value="max">Max compression</option> -->
+          <!-- </select> -->
         <button id="send-split-data" onclick="sendData()">Compress</button>
     </div>
 
