--- a/public/merge/index.html
+++ b/public/merge/index.html
@@ -3,13 +3,16 @@
     <head>
         <link rel="icon" href="./remove.png"> 
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     </head>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     
     <body>        
-        <h2 style="font-size: 4rem;">Upload File</h2>
         <div id="signup-section">
+            <h2 id = "upload-head">Upload File</h2>
             <div class="left">
                 <div id="form-container">                
                     <form class="mergeform" data-addedSubmitEventListener="false" id="form_merge_1" action="/upload" enctype="multipart/form-data" method="POST" class="signupForm">
@@ -21,9 +24,10 @@
                         <input type="submit" id="upload_button_2" value="Upload" class="hidden">
                     </form>
                 </div>
+                <button id="add-button">ADD MORE FILES</button>
+                <button id="submitButton" >SUBMIT</button>
             </div>
-            <button id="add-button">ADD MORE FILES</button>
-            <button id="submitButton" >SUBMIT</button>
+            <img src="../bookmark/merge.png" alt="merge-image" id = "merge-image">
             <p id="info-sse">Select Files</p>
         </div>
     </body>    
