--- a/public/compress/index.html
+++ b/public/compress/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="signup-section">
         <!-- upload file -->
-        <button id="reload" onclick="resetPage() ">Reset </button><br><br>
+        <button style='cursor: pointer'  id="reload" onclick="resetPage() ">Reset </button><br><br>
                 <div id="upload-phase">
                     <form id="compress-upload-form" enctype="multipart/form-data" method="post">
                         <input id="compress-upload-input" type="file" accept="application/pdf" name="pdfbm_upload">
@@ -26,7 +26,7 @@
                         <span style="font-size: 30px;">Max Mode</span>
                     </div>
                     <br><br>
-                    <button id="send-split-data" onclick="sendData()">Compress</button>
+                    <button style='cursor: pointer'  id="send-split-data" onclick="sendData()">Compress</button>
                 </div>
                 
                 <div id = "image">
