--- a/public/index.html
+++ b/public/index.html
@@ -17,19 +17,19 @@
         All your PDF needs at one place!<br>
       </h1>
       <div id="card">
-        <button id="join-btn" class = "card" onclick="window.location.href='./bookmark/bookmarksIndex.html'">
+        <button style='cursor: pointer' id="join-btn" class = "card" onclick="window.location.href='./bookmark/bookmarksIndex.html'">
           Bookmark &nbsp;&nbsp;
-          <img src="./icons/bookmark-icon.png" alt="bookmark-icon" height="20px">
+          <img style='cursor: pointer' src="./icons/bookmark-icon.png" alt="bookmark-icon" height="20px">
         </button>
-        <button id="merge-btn" class = "card" onclick="window.location.href='./merge/index.html'">
+        <button style='cursor: pointer' id="merge-btn" class = "card" onclick="window.location.href='./merge/index.html'">
           Merge &nbsp;&nbsp;
           <img src="./icons/merge-icon.png" alt="merge-icon" height="20px">
         </button>
-        <button id="split-btn" class = "card" onclick="window.location.href='./split/index.html'">
+        <button style='cursor: pointer' id="split-btn" class = "card" onclick="window.location.href='./split/index.html'">
           Split &nbsp;&nbsp;
           <img src="./icons/split-icon.png" alt="split-icon" height="20px">
         </button>
-        <button id="split-btn" class = "card" onclick="window.location.href='./compress/index.html'">
+        <button style='cursor: pointer'  id="split-btn" class = "card" onclick="window.location.href='./compress/index.html'">
           Compress &nbsp;&nbsp;
           <img src="./icons/compress-icon.png" alt="compress-icon" height="20px">
         </button>
