--- a/public/merge/index.html
+++ b/public/merge/index.html
@@ -24,8 +24,8 @@
                         <input type="submit" id="upload_button_2" value="Upload" class="hidden">
                     </form>
                 </div>
-                <button id="add-button">ADD MORE FILES</button>
-                <button id="submitButton" >SUBMIT</button>
+                <button style='cursor: pointer'  id="add-button">ADD MORE FILES</button>
+                <button style='cursor: pointer'  id="submitButton" >SUBMIT</button>
             </div>
             <img src="../bookmark/merge.png" alt="merge-image" id = "merge-image">
             <p id="info-sse">Select Files</p>
